public/custom.css
html,
body,
#root,
.container {
  height: 100%;
}
.browse-title {
  text-align: center;
  padding-top: 1em;
  margin-bottom: 2em;
}
body {
  display: flex;
  flex-direction: column;
}

.main-section {
  height: 100%;
  padding: 2em;
  text-align: center;
}

.card-container {
  display: flex;
  gap: 2em;
  padding: 0 2em;
  flex-wrap: wrap;
  justify-content: center;
}

.card-container .card {
  max-width: max-content;
}

.main-section .btn {
  max-width: 15%;
  margin: 1em;
}
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.tool-tip {
  margin: 0.5em;
  font-size: 0.9em;
}

form {
  width: 50vw;
}

.sign-form {
  max-width: 90%;
}

.btn-primary {
  width: 50%;
}

.mb-3 {
  margin-top: 2em;
}
.container {
  height: 100%;
}

.row {
  gap: 1em;
  display: flex;
  align-items: center;
  justify-content: center;
}

.alert p {
  margin: 0;
}

.alert {
  padding: 1em 2em;
  margin-bottom: 3em;
}

.col-md-6 {
  width: 40%;
}

.formContainer,
.profile-view {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 3em 0;
}

.formContainer .alert {
  margin: 2em 0;
}

.preferenceButtons {
  display: flex;
  flex-direction: column;
}

.language-title {
  display: flex;
  flex-direction: column;
  margin-bottom: 0 !important;
}

.language-title label {
  margin-bottom: 0 !important;
}

.language-title small {
  margin-bottom: 0.5rem !important;
}

.buttonContainer {
  display: flex;
  justify-content: center;
  padding-top: 1rem;
}

.language-checkbox-container {
  border: 2px solid var(--bs-border-color);
  border-radius: 0.25rem;
  padding: 0.25rem;
  width: 300px;
  height: 100px;
  overflow-y: scroll;
}

.footer {
  background-color: var(--bs-primary);
  border: 2px solid black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1rem;
  gap: 1rem;
}

.developers {
  display: flex;
  justify-content: space-around;
}

.filter-container {
  width: 40vw;
}

.formContainerFilter {
  width: 100%;
}

.formContainerFilter form {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.filter-btn {
  align-self: center;
  margin: 0.75rem;
}

h1 {
  margin-top: 0.5rem !important;
  margin-left: 0.5rem !important;
}

.accordion {
  width: 40vw;
  margin-top: 0.25rem;
}
.developers .accordion-container .accordion {
  margin-top: 2em;
}
/* Remove default first/last child styling */
.accordion-item:first-child {
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}

.accordion-item:first-child .accordion-button {
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}

.accordion-item:last-child {
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.accordion-item:last-child .accordion-button.collapsed {
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

/* Apply correct styling to first visible */
.accordion-item.first-visible {
  border-top: var(--bs-accordion-border-width) solid
    var(--bs-accordion-border-color) !important;
  border-top-left-radius: var(--bs-accordion-border-radius) !important;
  border-top-right-radius: var(--bs-accordion-border-radius) !important;
}

.accordion-item.first-visible .accordion-button {
  border-top-left-radius: var(--bs-accordion-inner-border-radius) !important;
  border-top-right-radius: var(--bs-accordion-inner-border-radius) !important;
}

/* Apply correct styling to last visible */
.accordion-item.last-visible {
  border-bottom-left-radius: var(--bs-accordion-border-radius) !important;
  border-bottom-right-radius: var(--bs-accordion-border-radius) !important;
}

.accordion-item.last-visible .accordion-button.collapsed {
  border-bottom-left-radius: var(--bs-accordion-inner-border-radius) !important;
  border-bottom-right-radius: var(
    --bs-accordion-inner-border-radius
  ) !important;
}

.accordion-item.last-visible .accordion-body {
  border-bottom-left-radius: var(--bs-accordion-inner-border-radius) !important;
  border-bottom-right-radius: var(
    --bs-accordion-inner-border-radius
  ) !important;
}

